k8s/01-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sso-db
  namespace: sso-enterprise
spec:
  selector:
    matchLabels:
      app: sso-db
  serviceName: sso-db
  replicas: 1
  template:
    metadata:
      labels:
        app: sso-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
        readinessProbe:
          exec:
            command: ["mysqladmin", "ping", "-h", "localhost"]
          initialDelaySeconds: 20
          periodSeconds: 10
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: sso-db
  namespace: sso-enterprise
spec:
  ports:
  - port: 3306
  selector:
    app: sso-db
  clusterIP: None # Headless service for StatefulSet identity
