k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso-ingress
  namespace: sso-enterprise
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  rules:
  - host: vmip.dmj.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sso-service
            port:
              number: 80
